--- a/views/usuarios.html
+++ b/views/usuarios.html
@@ -7,7 +7,7 @@
         <th>Senha</th>
       </tr>
     </thead>
-    <tbody> 
+   <!-- <tbody> 
         {loop="$users"}    
           <tr>
             <td>{$value.idUser}</td>
@@ -17,4 +17,5 @@
           </tr>
         {/loop}             
     </tbody>
+  -->
   </table>
